# ReviewBuddy

./: .dockerignore  Dockerfile  README.md  pyproject.toml
k8s/: prreviewbot.yaml
scripts/: build_pyinstaller.py
src/prreviewbot/: __main__.py  cli.py
src/prreviewbot/core/: comment_format.py  diff_hunks.py  errors.py  host.py  language.py  link_parser.py  model_select.py  review_service.py  types.py
src/prreviewbot/llm/: azure_openai_llm.py  base.py  heuristic.py  openai_llm.py
src/prreviewbot/providers/: azure_devops.py  base.py  bitbucket.py  gitea.py  github.py  gitlab.py  registry.py
src/prreviewbot/storage/: config.py
src/prreviewbot/web/: app.py  branding.py
src/prreviewbot/web/static/: app.js  settings.js  styles.css
src/prreviewbot/web/templates/: landing.html  settings.html  tool.html
tests/: test_azure_project_spaces.py  test_azure_provider_items_invalid_json.py  test_azure_provider_non_json.py  test_config_migration.py  test_diff_hunks.py  test_github_provider.py  test_link_parser.py  test_llm_config_migration.py  test_llm_json_fence_parsing.py  test_openai_missing_dependency.py  test_pages.py  test_post_comment_api_github.py  test_review_api.py  test_review_service_azure_openai_config.py  test_review_service_overrides.py  test_strict_llm_override.py
