[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "prreviewbot"
version = "0.1.0"
description = "Distributable local PR review & suggestion bot (GitHub/GitLab/Bitbucket/Azure DevOps) with model auto-selection by language."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PRreviewBot Contributors" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "httpx>=0.25",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
openai = [
  "openai>=1.40",
]
dev = [
  "pytest>=8.0",
  "respx>=0.21",
  "ruff>=0.4",
]
build = [
  "pyinstaller>=6.6",
]

[project.scripts]
prreviewbot = "prreviewbot.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/prreviewbot"]

[tool.hatch.build]
include = [
  "src/prreviewbot/web/templates/**",
  "src/prreviewbot/web/static/**",
]

[tool.ruff]
line-length = 100
target-version = "py310"


